--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         registry-url: 'https://npm.pkg.github.com'
         # Defaults to the user or organization that owns the workflow file
-        scope: '@octocat'
+        scope: '@zenenwjaimes/array-stream-traversal'
     # Publish to GitHub Packages
     - run: npm publish
       env:
