--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,23 +1,14 @@
-name: Create Release 
+name: Create Release
 
 on:
-  push:
-    branches:
-      - master
+   push:
+     # Sequence of patterns matched against refs/tags
+     branches:
+       - "master"
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: yarn install
-      - run: yarn test
-
-  publish-gpr:
-    needs: build
+    name: Create Release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
