--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,7 @@ jobs:
     # Setup .npmrc file to publish to npm
     - uses: actions/setup-node@v1
       with:
+        always-auth: true
         node-version: '10.x'
         registry-url: 'https://registry.npmjs.org'
     - run: npm install
@@ -20,6 +21,7 @@ jobs:
     # Setup .npmrc file to publish to GitHub Packages
     - uses: actions/setup-node@v1
       with:
+        always-auth: true
         registry-url: 'https://npm.pkg.github.com'
         # Defaults to the user or organization that owns the workflow file
         scope: '@zenenwjaimes/array-stream-traversal'
