--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Publish new release
+name: publish Node.js Package
 
 on:
   push:
@@ -32,4 +32,4 @@ jobs:
       - run: git push --tags && git push
       - run: yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.SuperSecret }}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
