--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,16 +20,29 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-          registry-url: https://npm.pkg.github.com/
-          scope: '@zenenwjaimes/array-stream-traversal'
-      - run: yarn install --registry https://npm.pkg.github.com/
-      - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
-      - run: yarn version --minor
-      - run: git push --tags && git push
-      - run: yarn publish --registry https://npm.pkg.github.com/
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      publish_ghub:
+        - uses: actions/checkout@v2
+        - uses: actions/setup-node@v1
+          with:
+            node-version: 12
+            registry-url: https://npm.pkg.github.com/
+            scope: '@zenenwjaimes/array-stream-traversal'
+        - run: yarn install --registry https://npm.pkg.github.com/
+        - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
+        - run: yarn version --minor
+        - run: git push --tags && git push
+        - run: yarn publish --registry https://npm.pkg.github.com/
+          env:
+            NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      publish_npm:
+        - needs: publish_ghub
+        - uses: actions/checkout@v2
+        - uses: actions/setup-node@v1
+          with:
+            node-version: 12
+            registry-url: https://registry.npmjs.org/
+            scope: '@zenenwjaimes/array-stream-traversal'
+        - run: yarn install --registry https://registry.npmjs.org/
+        - run: yarn publish --registry https://registry.npmjs.org/
+          env:
+            NODE_AUTH_TOKEN: ${{secrets.NODE}}
