--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,10 @@ jobs:
       - run: yarn version --minor
       - run: git push --tags && git push
       - run: yarn publish --registry https://npm.pkg.github.com/
-      - run: echo "::set-env name=NODE_AUTH_TOKEN::$NPM_TOKEN"
-      - run: yarn publish --registry https://registry.npmjs.org/
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NPM_TOKEN: ${{secrets.NODE}}
+      - run: echo "::set-env name=NODE_AUTH_TOKEN::$NPM_TOKEN"
+        env:
+          NPM_TOKEN: ${{secrets.NODE}}
+      - run: yarn publish --registry https://registry.npmjs.org/
