Last time. If this doesn't work no auto publishing to npm

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,4 +38,4 @@ jobs:
       - run: echo "::set-env name=NODE_AUTH_TOKEN::$NPM_TOKEN"
         env:
           NPM_TOKEN: ${{secrets.NODE}}
-      - run: yarn publish --registry https://registry.npmjs.org/
+      - run: yarn publish --access public --registry https://registry.npmjs.org/
