--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,15 +27,23 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@zenenwjaimes/array-stream-traversal'
       - run: yarn install --registry https://npm.pkg.github.com/
-      - run: yarn install --registry https://registry.npmjs.org/
       - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
       - run: yarn version --minor
       - run: git push --tags && git push
       - run: yarn publish --registry https://npm.pkg.github.com/
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          NPM_TOKEN: ${{secrets.NODE}}
-      - run: echo "::set-env name=NODE_AUTH_TOKEN::$NPM_TOKEN"
+  publish_npm:
+    needs: publish-gpr
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
+          scope: '@zenenwjaimes/array-stream-traversal'
+      - run: yarn install --registry https://registry.npmjs.org/
+      - run: yarn publish --minor --registry https://registry.npmjs.org/
         env:
-          NPM_TOKEN: ${{secrets.NODE}}
-      - run: yarn publish --access public --registry https://registry.npmjs.org/
+          NODE_AUTH_TOKEN: ${{secrets.NODE}}
