--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
           scope: '@zenenwjaimes/array-stream-traversal'
       - run: yarn install --registry https://registry.npmjs.org/
+      - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
       - run: yarn publish --minor --registry https://registry.npmjs.org/
         env:
           NODE_AUTH_TOKEN: ${{secrets.NODE}}
